# postergirl

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-container.yml
postergirl/: __main__.py  app.py  cli.py  feed.py  feedparserfeed.py  login.py  models.py  paths.py  templates.py  xpathfeed.py
